src/App.css
:root {
	--white: #fff;
	--orange: #FF8A65;
	--dark: #2a2a2a;
	--gray-blue: #5e6b77;
}

body {
	background: linear-gradient(to right, var(--white), var(--gray-blue));
}

main {
	width: 100%;
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	/* background: linear-gradient(to right, var(--white), var(--gray-blue)); */
}

/* player */
.player {
	position: -webkit-sticky;
	position: sticky;
	bottom: 0;
	/* position: relative; */
	height: 400px;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	background: linear-gradient(to right, #5D6D7E, #566573);
	box-shadow: 1px 0px 10px 6px rgba(240,240,240,0.2);
}

.player #logo {
	position: absolute;
	top: 10px;
	left: 30px;
	font-size: 25px;
	color: #ccc;
}

.player #logo span {
	margin-right: 15px;
}

/* left & right part */
.right, .left {
    position: relative;
	height: 100%;
	width: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

/* song image */
.left .image-track-container {
	height: 250px;
	width: 250px;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2);
}
.left img {
    /* height: 300px;
	width: 80%;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2); */
	height: 100%;
	width: 100%;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2);
}

/* range slider */
input[type="range"] {
    -webkit-appearance: none;
    width: 50%;
	outline: none;
	height: 2px;
	margin: 0 15px;
}
input[type="range"]::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	height: 20px;
	width: 20px;
	background: var(--orange);
	border-radius: 50%;
	cursor: pointer;
}
input[type="range"]::-moz-range-thumb {
	height: 20px;
	width: 20px;
	background: var(--orange);
	border-radius: 50%;
	cursor: pointer;
}
.right input[type=range]{
	width: 40%;
}

/* volume part */
.left .volume {
    position: absolute;
	bottom: 7%;
	left: 0;
	width: 100%;
	height: 30px;
	display: flex;
	align-items: center;
	justify-content: center;
	color: var(--white);
}
.left .volume p {
	font-size: 15px;
}
.left .volume span {
	cursor: pointer;
	padding: 8px 12px;
	background: var(--orange);
}

.volume #volume--show {
	padding: 8px 12px;
	margin: 0 5px 0 0;
	background: rgba(245,245,245,0.1);
}

/* right part */
.right .middle {
	margin-top: 100px;
	display: flex;
	justify-content: space-around;
	align-items: center;
	/* background-color: var(--dark); */
	width: 50%;
}
.right .middle button {
	border: none;
	height: 35px;
	width: 35px;
	border-radius: 50%;	
    display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	outline: none;
	transition: 0.5s;
	background: rgba(255,255,255,0.1);
    color: var(--white);
}
.right .middle button > span {
	font-size: 1rem;
	display: flex;
	justify-content: center;
	align-items: center;
}
.right #title {
	font-size: 35px;
	margin-bottom: 10px;
}
.right #artist {
	font-size: 18px;
}
.right .duration {
	position: absolute;
	bottom: 10%;
	left: 50%;
	transform: translateX(-50%);
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	height: 20px;
	margin-top: 40px;
}

/* .right .duration p {
	color: var(--white);
	font-size: 15px;
	margin-left: 20px;
} */

#play {
	background: var(--orange);
	height: 50px;
	width: 50px;
	font-size: 1.5rem;
}

.right span::before {
	color: var(--white);
	font-size: 20px;
}

.right .show_song_no {
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
    color: var(--white);
    border-radius: 5px;
    background: rgba(255,255,255,0.2);
}

.right .show_song_no p:nth-child(2){
	margin: 0 5px;
}

.song-info {
	text-transform: capitalize;
	color: var(--white);
	text-align: center;
}


/* Visualyzer box */
.blur-img {
	filter: blur(30px);
}

.visualizer-box {
	display: flex;
	justify-content: center;
	align-items: center;
	filter: blur(5px) contrast(10);
	mix-blend-mode: screen;

	/* placing */
	position: absolute;
	left: 50%;
	top: 45%;
	transform: translate(-60%, -42%);
}

.visualizer-container {
	padding: 50px;
	background-color: var(--dark);
}

.visualizer {
	position: relative;
	width: 180px;
	height: 180px;
	border-radius: 50%;
	/* background-color: var(--white); */
	transition: 0.5s;
	transform: rotateX(180deg);
}

.visualizer--innercircle {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 150px;
	height: 150px;
	background-color: var(--dark);
	border-radius: 50%;
	z-index: 10;
}

.visualyzer--element {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	display: inline-block;
	width: 40px;
	height: 40px;
	border-radius: 10px;
	border-top: 40px solid rgb(157, 171, 247);
	border-left: 20px solid transparent;
	border-right: 20px solid transparent;
	transform-origin: top left;
	transition: 0.25s;
}
/* end visualyzer box */

.hidden {
	display: none !important;
}

.bg-orange {
	background-color: var(--orange) !important;
	color: var(--white);
}
.bg-purple {
	background-color: #5d6d7e !important;
	color: var(--white);
}
.bg-transparent {
	background-color: rgba(255,255,255,0.1) !important;
	color: var(--white);
}
.bg-blue {
	background: linear-gradient(to right, #5D6D7E, rgb(157, 171, 247)) !important;
	color: var(--white);
}
.bg-blue span {
	color: var(--white);
}
.repeat--button {
	position: relative;
}
.repeat-one {
	position: absolute;
	top: 5px;
	right: 4px;
	font-size: 0.6rem;
	font-weight: 900;
}

.duration--display {
	color: var(--white);
}

/* playlist */
.playlist {
	width: 800px;
	height: 50%;
	padding: 20px;
}
.playlist--song {
	display: grid;
	grid-template-columns: 50% 50%;
	border-radius: 5px;
	padding: 10px;
	border-bottom: 1px solid rgba(240,240,240,0.2);
}
.playlist--song:hover {
	color: var(--white);
	background-color: rgba(0,0,0,0.2);
}
/* ... */

